<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_hulk"
    android:foreground="@drawable/border"
    android:orientation="vertical"
    android:visibility="visible"
    app:layoutDescription="@xml/activity_main_scene">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/titulo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextUno"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/editTextDos"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/violeta_hulk"
            android:gravity="center"
            android:onClick=""
            android:text="@string/boton" />

        <TextView
            android:id="@+id/textView_result_compare"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:gravity="center"
            android:text="@string/iguales"
            android:visibility="gone" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>